# embedded-systems-project3

./: .gitignore
ROS/Computer/ros2_foxy/install/: local_setup.sh  setup.sh
ROS/Computer/ros2_foxy/install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_sync_read.h  group_sync_write.h  port_handler.h  port_handler_arduino.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h
ROS/Computer/ros2_foxy/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
ROS/Computer/ros2_foxy/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ROS/Computer/ros2_foxy/install/dynamixel_sdk_examples/include/: read_write_node.hpp
ROS/Computer/ros2_foxy/install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: cross_drawer  digit_publisher  draw_digit  motor_controller  read_write_node
ROS/Computer/ros2_foxy/log/: latest_build
ROS/Computer/ros2_foxy/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS/Computer/ros2_foxy/src/log/: latest_build
ROS/Ultra96v2/ros2_ws/: run_image_processor.sh
ROS/Ultra96v2/ros2_ws/log/: latest_build
ROS/Ultra96v2/ros2_ws/src/image_processor/: CMakeLists.txt
ROS/Ultra96v2/ros2_ws/src/image_processor/launch/: image_processor_launch.py
ROS/Ultra96v2/ros2_ws/src/image_processor/src/: image_processor_node.cpp
VHDL/: nn_ctrl.vhd  tx_mod_fsm.vhd
(+174 files in other folders)
